@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-21T01:02:32Z",
-  "count_outdated" : 848,
-  "uniques_outdated" : 455,
-  "count" : 864,
-  "uniques" : 471,
+  "timestamp" : "2025-02-22T01:00:15Z",
+  "count_outdated" : 849,
+  "uniques_outdated" : 456,
+  "count" : 865,
+  "uniques" : 472,
   "clones" : [
-    {
-      "timestamp": "2025-02-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-09T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-02-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
