@@ -3,11 +3,6 @@
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2025-02-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-02-09T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2025-02-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-21T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
