@@ -1,3 +1,12 @@
+2025-02-22T01:00:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13467910775 # 573
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-22
+* notice: last 14d: unq all: 6 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 455 848 / 471 864
+* notice: next accum: outdated-unq outdated-all / unq all: 456 849 / 472 865
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-02-08] / [2025-02-21]
+
 2025-02-21T01:02:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13447791195 # 572
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-21
